# common-rs

./: Cargo.toml  README.md
src/: claim.rs  config.rs  layer.rs  lib.rs  pool.rs  registry.rs  status.rs  utils.rs
src/config/: layer.rs  middleware.rs  mod.rs
src/infra/: cqrs.rs  id.rs  resolver.rs
src/infra/cqrs/: args.rs
src/layer/: http_auth.rs  role_mapping.rs
src/layer/role_mapping/: distribute.rs  mod.rs  source.rs
src/middleware/: apollo.rs  consul.rs  mod.rs  nacos.rs  rabbitmq.rs  redis.rs
src/registry/: consul.rs  etcd.rs  mod.rs
