[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4" }
once_cell = "1.16.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
serde_json = "1.0.89"
base64 = "0.21.0"
pin-project-lite = "0.2.9"
async-trait = "0.1.59"
parking_lot = "0.12"
kosei = { version = "0.1.2", features = ["full"] }
tracing = "0.1"
http = "0.2.8"
cookie = { version = "0.16.2", features = ["secure", "percent-encode"] }
casbin = "2.0.9"
etcd-client = "0.10"
tonic = { version = "0.8.3", features = ["transport"] }
names = "0.14.0"
redis = { version = "0.22.1", features = ["tokio-comp"] }
itertools = "0.10.5"
bytes = "1.3.0"
thiserror = "1.0"
faststr = "0.2.1"
deadpool-redis = "0.11.1"
