[package]
name = "common"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.0.8" # AMQP protocol (RabbitMQ)
async-trait = "0.1.59"
base64 = "0.21.0"
bytes = "1.3.0"
casbin = "2.0.9"
colored = "2.0.0"
cookie = { version = "0.17.0", features = ["secure", "percent-encode"] }
diesel = { version = "2.0.0", default_features = false }
etcd-client = "0.10"
faststr = "0.2.1"
futures = "0.3.25"
http = "0.2.8"
itertools = "0.10.5"
kosei = { version = "0.1.3", features = ["full"] }
names = "0.14.0"
once_cell = "1.16.0"
parking_lot = "0.12"
pin-project-lite = "0.2.9"
redis = { version = "0.22.1", features = ["tokio-comp"] }
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = "0.7"
tonic = { version = "0.8.3", features = ["transport"] }
tower = { version = "0.4" }
tracing = "0.1"
url = "2.3"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
